--- a/src/loginpage.form
+++ b/src/loginpage.form
@@ -39,7 +39,7 @@
           <text value=""/>
         </properties>
       </component>
-      <component id="8e453" class="javax.swing.JLabel" binding="passwordlabel">
+      <component id="8e453" class="javax.swing.JLabel" binding="passwordLabel">
         <constraints>
           <grid row="2" column="0" row-span="3" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
